# jerguero-rs

./: .gitignore  Cargo.toml  FEATURES.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
db/: schema.sql
src/: main.rs
src/controller/: mod.rs
src/view/: mod.rs
src/view/icons/: mod.rs
static/: tailwind.css
